--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ packages = [{include = "django_2022_nomad"}]
 [tool.poetry.dependencies]
 python = "^3.8"
 Django = "^4.1.1"
+Pillow = "^9.2.0"
+djangorestframework = "^3.13.1"
 
 
 [tool.poetry.group.dev.dependencies]
